feat: add check email and readme
